# LAB3

./: CMakeLists.txt  Converters.h  ConvertersFactory.h  SoundProcessor.cpp  config.txt  converters.cpp  converters.h  convertersFactory.cpp  convertersFactory.h  main.cpp  readConfig.cpp  readConfig.h  readWAV.cpp  readWAV.h  soundProcessor.cpp  soundProcessor.h  writeWAV.cpp  writeWAV.h
lab3/: CMakeLists.txt  Converters.cpp  ConvertersFactory.cpp  LICENSE  ReadConfig.cpp  ReadConfig.h  ReadWAV.cpp  ReadWAV.h  SampleClass.cpp  SampleClass.h  SoundProcessor.h  WriteWAV.cpp  WriteWAV.h  config.txt  main.cpp  sample.h
